--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -67,6 +67,31 @@
    "search_country": "search country",
    "cancel": "cancel",
    "business_not_listed_here": "My business is not listed here",
+   "company_house_registration_number": "Company House registration number",
+   "A1213454": "A1213454",
+   "date_of_incorporation": "Date of incorporation",
+   "business_type": "Business type",
+   "private_limited_company": "Private Limited Company",
+   "known_by_different_name": "Known by a different name",
+   "usually_looks_like_format": "Usually it looks like 12345678, G1234567 or LP123456",
+   "post_code":"Post Code",
+   "optional":"Optional",
+   "address_line_01":"Address line 01",
+   "address_line_02":"Address line 02",
+   "city":"City",
+   "registered_business_address_title": "Registered business address",
+   "registered_business_address_subtitle" : "The official address registered with a government body. It can be different from the address at which you have your business or coworking space",
+   "address_not_here":"My address is not here",
+   "role_in_the_company":"Role in the company",
+   "role_1_title":"I'm the only director and significant shareholder",
+   "role_1_subtitle":"You are the only owner with more than 25% of the business",
+   "role_2_title":"I'm one of several directors or significant shareholders",
+   "role_2_subtitle":"You're self-employed and operate under your own name (i.e. sole trader)",
+   "role_3_title":"I'm neither a director nor shareholder",
+   "role_3_subtitle":"Your company is not yet registered or you want to learn more about Revolut Business",
+   "not_sure_what_to_choose": "I'm not sure what to choose",
+   "create_passcode_title": "Create passcode",
+   "create_passcode_subtitle":"The passcode should be 6 to 12 digits long",
 
 
    "help":"Help",
