two bottom sheets designed and home screen option logic has been set will continue further tomorrow

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -142,7 +142,12 @@
    "share_statement":"Share statement",
    "done":"Done",
    "et_bank_business":"ET Bank Business",
-   "export":"Export"
+   "export":"Export",
+   "exchange":"Exchange",
+   "add_money":"Add Money",
+   "details":"Details",
+   "add_new_accounts":"Add new account",
+   "all_accounts":"All Accounts"
    
    
    
