4 screens in card section design done

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -163,7 +163,19 @@
    "tap_again_unfreeze":"Tap again to unfreeze",
    "settings":"Settings",
    "expense_reporting":"Expense Reporting",
-   "attach_receipts":"Attach receipts, categories & review card transactions"
+   "attach_receipts":"Attach receipts, categories & review card transactions",
+   "change_card_name":"Change card name",
+   "current_name":"Current name",
+   "owner":"Owner",
+   "choose_owner":"Choose who will be the owner of this card",
+   "team_member":"Team members",
+   "get_card":"Get Card",
+   "best_for_business":"Best for business trips and operational expenses",
+   "best_for_online":"Best for online purchases",
+   "order":"Order",
+   "donot_order":"Do not order a card",
+   "ready_to_use":"Your card is ready to be used",
+   "use_it_online":"Use it online or via Apple Pay straight away"
 
 
    
