commitng for pulling dev branch

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -267,5 +267,6 @@
    "transfer":"Transfer",
    "request":"Requests",
    "shedule":"Shedule",
-   "favourite":"Favourite"
+   "favourite":"Favourite",
+   "hub":"Hub"
 }
