design completed till hub section

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -299,8 +299,29 @@
    "donot_order":"Do not order a card",
    "ready_to_use":"Your card is ready to be used",
    "use_it_online":"Use it online or via Apple Pay straight away",
-   "hub":"Hub"
-
+   "hub":"Hub",
+   "1_month_free":"1 Month Free",
+   "upgrade_plane":"Upgrade Your plan with 1 month free",
+   "enjoy_higher_limits":"Enjoy higher limits on FX,international payments and more...",
+   "upgrade":"Upgrade",
+   "essentials":"Essentials",
+   "cards":"Cards",
+   "team":"Team",
+   "merchant":"Merchant",
+   "linked":"Linked",
+   "upgrade1title":"Save Money everyday with Rewards",
+   "upgrade1subtitle":"Get offers and discounts on products and services from your trusted partners",
+   "upgrade2title":"Exclusive offers form top brands",
+   "upgrade2subtitle":"From Google to Deliveroo, we bring you global products and services at a discount!",
+   "your_plan_doesnt":"Your plan doesn’t include this feature",
+   "Upgrade_your_plan":"Upgrade your plan to unlock a range offeatures that will help grow you business",
+   "get_app_in_browser":"Get this app in your browser",
+   "login_from_computer_browser":"Log in to ET Bank Business from your computer browser to get this app",
+   "upgrade_plan":"Upgrade plan",
+   "inbox":"Inbox",
+   "caught_up":"You’re all caught up",
+   "check_back_later":"Check back later for promotions and recommendations to keep your account up to date"
+   
 
    
    
