minor changes in text done from revolut to ET bank

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -4,7 +4,7 @@
    "onboarding1_title": "Maximize Your \nBusiness Potential",
    "onboarding1_subtitle": "Empower Your Business Finances with ET \nBank. Unlock full control, elevate your \nexperience.",
    "onboarding2_title": "Payments Made Simple, Absolutely Free",
-   "onboarding2_subtitle": "Enjoy cost-free international and local payments within your plan allowance, plus free transfers between Revolut Business accounts. Streamline your financial transactions effortlessly.",
+   "onboarding2_subtitle": "Enjoy cost-free international and local payments within your plan allowance, plus free transfers between ET bank Business accounts. Streamline your financial transactions effortlessly.",
    "onboarding3_title": "Effortless Spend Control By Company Card",
    "onboarding3_subtitle": "Issue physical and virtual debit cards for your team. Track expenses, set limits, or freeze cards in a click, ensuring total control over your company's spending.",
    "onboarding4_title": "Transparent Currency Exchange",
@@ -32,7 +32,7 @@
    "freelancer": "Freelancer",
    "freelancer_desc": "You're self-employed and operate under your own name (i.e. sole trader)",
    "dont_have_business": "I don't have a business yet",
-   "dont_have_business_desc": "Your company is not yet registered or you want to learn more about Revolut Business",
+   "dont_have_business_desc": "Your company is not yet registered or you want to learn more about ET Bank Business",
    "mobile_no": "Mobile Number",
    "mobile_no_verification_code": "We may send a verification code to this number",
    "country": "Country",
@@ -43,7 +43,7 @@
    "password_condition": "Your password must contain 8 or more characters and include numbers, letters, and special characters",
    "Password_condition_failed": "Your password must contain special characters",
    "welcome_back_title": "Welcome back,\nRamy!",
-   "welcome_back_subtitle": "We've recognised your personal Revolut account. Confirm it's you and we can use your information to speed up your sign up.",
+   "welcome_back_subtitle": "We've recognised your personal ET Bank account. Confirm it's you and we can use your information to speed up your sign up.",
    "yes_confirm": "Yes, confirm",
    "no_not_me": "No, not me",
    "enter_passcode": "Enter passcode",
@@ -83,7 +83,7 @@
    "role_2_title": "I'm one of several directors or significant shareholders",
    "role_2_subtitle": "You're self-employed and operate under your own name (i.e. sole trader)",
    "role_3_title": "I'm neither a director nor shareholder",
-   "role_3_subtitle": "Your company is not yet registered or you want to learn more about Revolut Business",
+   "role_3_subtitle": "Your company is not yet registered or you want to learn more about ET Bank Business",
    "not_sure_what_to_choose": "I'm not sure what to choose",
    "create_passcode_title": "Create passcode",
    "create_passcode_subtitle": "The passcode should be 6 to 12 digits long",
@@ -287,7 +287,7 @@
    "continue":"Continue",
    "refer_business":"Refer a Business",
    "refer_for_faster":"Refer a business for faster payments",
-   "free_instant_transfer":"Free Instant transfers to other Revolute accounts",
+   "free_instant_transfer":"Free Instant transfers to other ET Bank accounts",
    "get_started":"Get Started",
    "get_unlimited_free_transfer":"Get unlimited free transfers between your accounts and your business contact",
    "enable_contact_permission":"Enable contact permission",
