--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -460,7 +460,15 @@
    "review_description":"Please carefully review the details below before confirming.",
    "new_doc":"New documents",
    "success":"Success",
-   "confirmation_description":"By submitting your application, you confirm that the information you have provided is accurate and up-to-date"
+   "confirmation_description":"By submitting your application, you confirm that the information you have provided is accurate and up-to-date",
+   "get_more_from_business":"Get more from your business account",
+   "easier_way_to_manage":"An easier way to manage all your business finances, in one place",
+   "exchange_money":"Exchange money with no hidden fees",
+   "exhange_money_description":"Hold in 28 currencies and convert at the real (interbank) exchange rate",
+   "create_accounts":"Create unlimited accounts",
+   "create_accounts_description":"Stay organised with as many accounts as you need for your business. Create one for each team member or client",
+   "recieve_international_payment":"Receive international payments",
+   "recieve_international_payment_description":"Get local and international account details to receive payments in different currencies"
 
    
    
