--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -16,7 +16,7 @@
    "sign_in": "Sign In",
    "sign_up": "Sign Up",
    "----------------------SIGN UP TEXTS-----------": "",
-   "signup_email_title": "Enter Email Address",
+   "signup_email_title": "Enter Email",
    "check_email_title": "Check your email on this device",
    "check_email_subtitle": "We've sent a confirmation email to abc12@gmail.com. Tap the button in the email to return to ET Bank Business",
    "go_to_inbox": "Go to inbox",
@@ -47,6 +47,9 @@
    "yes_confirm": "Yes, confirm",
    "no_not_me": "No, not me",
    "enter_passcode": "Enter passcode",
+   "ET_bank_passcode": "ET Bank Passcode",
+   
+   "used_for_your_personal_account": "Used for your personal account",
    "enter_passcode_to_login": "Enter Passcode to login",
    "forgot_passcode": "Forgot passcode?",
    "enable_push_notif_title": "Get what you need, in a tap",
@@ -88,7 +91,8 @@
    "create_passcode_title": "Create passcode",
    "create_passcode_subtitle": "The passcode should be 6 to 12 digits long",
    "enable_face_id_title": "Enable Face ID",
-   "enable_face_id_subtitle": "We've sent an SMS with confirmation code to your phone",
+   "enable_face_id_subtitle": "Use Face ID insted of a passcode to log in. it’s more secure.",
+   
    "use_face_id": "Use Face ID",
    "primary_reason_for_using_et_bank": "Primary reason for using ET Bank",
    "receive_payments_from_customers": "Receive payments from customers",
@@ -209,8 +213,8 @@
    "no_fee": "No fee",
    "account_type":"Account type",
    "send": "Send",
-   "email_otp_text":"Code sent to abc12@gmail.com unless you already have accounts",
-   "mobile_otp_text":"Code sent to +44 3456432342 unless you already have accounts",
+   "email_otp_text":"We’ve sent a confirmation code to your email abc12@gmail.com",
+   "mobile_otp_text":"We’ve sent an SMS with confirmation code to your phone +44 3456432342 ",
    "account_details_otp_text":"We’ve sent an SMS with confirmation code to your phone +44 3456432342",
    "code_hasnt_arrived":"Code hasn’t arrived?",
    "you_can_retry_in_58":"You can retry in 0:58",
