--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -426,9 +426,11 @@
    "take_picture":"Take a new picture",
    "application":"Application",
    "submit_doc":"Submit documentation",
-   "verify_business":"Verifying business Owners",
+   "verify_business":"Verifying business details",
+   "verify_business_details":"Verifying Business owners",
    "business_details":"Business details",
    "order_card":"Order card",
+   "choose_a_plan_and_order_a_card": "Choose a plan and order a card",
    "identity":"Identity",
    "ready_to_submit":"Ready to submit",
    "verified":"Verified",
