converting currency flow

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -16,7 +16,8 @@
    "sign_in": "Sign In",
    "sign_up": "Sign Up",
    "----------------------SIGN UP TEXTS-----------": "",
-   "signup_email_title": "Enter Email",
+   "signup_email_title": "Enter Email ",
+   "enter_email_address":"Enter email address",
    "check_email_title": "Check your email on this device",
    "check_email_subtitle": "We've sent a confirmation email to abc12@gmail.com. Tap the button in the email to return to ET Bank Business",
    "go_to_inbox": "Go to inbox",
