--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -289,9 +289,10 @@
    "select_plan":"Select your plan",
    "monthly_sub":"New monthly subscription",
    "first_month":"First Month",
-   "continue":"Continue",
+"continue":"Continue",
    "refer_business":"Refer a Business",
    "refer_for_faster":"Refer a business for faster payments",
+   "refer_for_faster_updated":"Refer a\nbusiness for faster payments",
    "free_instant_transfer":"Free Instant transfers to other ET Bank accounts",
    "get_started":"Get Started",
    "get_unlimited_free_transfer":"Get unlimited free transfers between your accounts and your business contact",
@@ -402,7 +403,7 @@
    "update_admin":"Update Admin",
    "request":"Request",
    "create_new_role":"Create a new role",
-   "new_role_name":"New Roles Name",
+   "new_role_name":"New role name",
    "using_card_with_apple_pay":"Start using your card with Apple Pay",
    "add_card_apple_wallet":"Add your card to Apple Wallet to use it right away with your iPhone or Apple Watch",
    "make_sure_you_have_entered_correct_email":"Make sure you have entered the correct email address. Also check your spam folder.",
@@ -477,7 +478,7 @@
    "recieve_international_payment":"Receive international payments",
    "recieve_international_payment_description":"Get local and international account details to receive payments in different currencies",
    "account_manager":"Account manager",
-   "get_in_touch":"Get in touch to opimise your plane",
+   "get_in_touch":"Get in touch to opimise your plan",
    "email_hasnt_arrived":"Email hasn’t arrived? You can retry in ",
    "enter_manually":"Enter manually",
    "send_invitaion":"Send Invitation",
