--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -139,7 +139,7 @@
    "how_do_you_sell_your_product_or_service": "How do you sell your product or service?",
    "physical_store": "Physical store",
    "ecommerce_platform_or_marketplace ": "Ecommerce platform or marketplace ",
-   "website_social_ecommerce_title": "Website, social or e-commerce profile",
+   "website_social_ecommerce_title": "Website, social or\ne-commerce profile",
    "website_social_ecommerce_subtitle": "No website? You can use your business profile on Linkedin, Amazon, eBay, Facebook, Instagram, Booking or another platform",
    "link": "Link",
    "dont_have_a_website": "Don't have a website?",
@@ -393,7 +393,7 @@
    "custom_role":"Custom role",
    "view":"View",
    "complete_access_to_account":"Complete access to account",
-   "costume_role":"Costume role",
+   "costume_role":"Custom role",
    "read_only":"Read_only access",
    "save_a_copy":"Save a copy",
    "rename":"Rename",
